# Gitsidian

./: .gitignore  LICENSE  README.md  gitsidian.py  pyproject.toml
templates/: branch-index.md  commit.md
